--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -40,8 +40,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_LOCALVERSION="-RefinedKernel_V2"
+CONFIG_LOCALVERSION_AUTO=n
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -419,8 +419,8 @@ CONFIG_SETEND_EMULATION=y
 #
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
 # CONFIG_TIMA_RKP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
@@ -1092,7 +1092,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1108,7 +1108,6 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-CONFIG_TIMA_LOG=y
 # CONFIG_C2PORT is not set
 
 #
@@ -4394,10 +4393,10 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
@@ -4433,7 +4432,6 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
