--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -287,7 +287,7 @@ CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_IOSCHED_VR=y
 CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_CFQ=y
-
+CONFIG_IOSCHED_ROW=y
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_FIFO is not set
@@ -298,7 +298,7 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_TRIPNDROID is not set
 # CONFIG_DEFAULT_VR is not set
 # CONFIG_DEFAULT_ZEN is not set
-
+# CONFIG_DEFAULT_ROW is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
