Port AOD from J730F
Switch Display module from S6E8AA5X01 (J530F) To S6E3FA3_J7Y17(J730F)
Adjust Brightness / Values to J530F

--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -2651,6 +2651,7 @@ CONFIG_USE_VSYNC_SKIP=y
 CONFIG_EXYNOS_DECON_FB=y
 # CONFIG_DECON_MIPI_DSI_PKTGO is not set
 CONFIG_DECON_LPD_DISPLAY=y
+# CONFIG_FB_WINDOW_UPDATE is not set
 # CONFIG_DECON_BLOCKING_MODE is not set
 CONFIG_DECON_EVENT_LOG=y
 CONFIG_EXYNOS_DECON_LCD=y
@@ -2668,7 +2669,7 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_EA8064G_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_J7XE is not set
 # CONFIG_PANEL_S6E3FA3_A7MAX is not set
-# CONFIG_PANEL_S6E3FA3_J7Y17 is not set
+CONFIG_PANEL_S6E3FA3_J7Y17=y
 # CONFIG_PANEL_EA8061S_J7XE is not set
 # CONFIG_PANEL_S6E3AA2_AMS474KF09 is not set
 # CONFIG_PANEL_S6E3AA2_A3Y17 is not set
@@ -2679,8 +2680,7 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_TD4300 is not set
 # CONFIG_PANEL_BRIGHTNESS_MAX_480CD is not set
 # CONFIG_PANEL_TD4100_J7POP is not set
-CONFIG_PANEL_S6E8AA5X01=y
-# CONFIG_PANEL_S6E8AA5X01_J5Y17_KOR is not set
+# CONFIG_PANEL_S6E8AA5X01 is not set
 # CONFIG_PANEL_EA8061S_J7VE is not set
 # CONFIG_PANEL_S6D7AA0_GTACTIVE2 is not set
 # CONFIG_EXYNOS_LCD_PWM_BACKLIGHT is not set
