Revert "Add AOD in defcon"
Reverted for release. Screen flicker issue is not yet solved.

This reverts commit f0ee072367bf4ae50b67153cfac7715dee3b5869.

--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -2650,20 +2650,19 @@ CONFIG_EXYNOS_MIPI_DSI=y
 CONFIG_USE_VSYNC_SKIP=y
 CONFIG_EXYNOS_DECON_FB=y
 # CONFIG_DECON_MIPI_DSI_PKTGO is not set
-CONFIG_DECON_LPD_DISPLAY=y
 # CONFIG_DECON_BLOCKING_MODE is not set
 CONFIG_DECON_EVENT_LOG=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_7870=y
-CONFIG_EXYNOS7870_DISPLAY_COMMAND_MODE=y
-# CONFIG_EXYNOS7870_DISPLAY_VIDEO_MODE is not set
+# CONFIG_EXYNOS7870_DISPLAY_COMMAND_MODE is not set
+CONFIG_EXYNOS7870_DISPLAY_VIDEO_MODE=y
 # CONFIG_DECON_DEVFREQ is not set
 # CONFIG_DECON_USE_BOOTLOADER_FB is not set
 # CONFIG_EXYNOS_MIPI_DSI_ENABLE_EARLY is not set
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 CONFIG_PANEL_AID_DIMMING=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
-CONFIG_LCD_DOZE_MODE=y
+# CONFIG_LCD_DOZE_MODE is not set
 CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_EA8064G_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_J7XE is not set
