--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -2650,24 +2650,28 @@ CONFIG_EXYNOS_MIPI_DSI=y
 CONFIG_USE_VSYNC_SKIP=y
 CONFIG_EXYNOS_DECON_FB=y
 # CONFIG_DECON_MIPI_DSI_PKTGO is not set
+CONFIG_DECON_LPD_DISPLAY=y
+# CONFIG_FB_WINDOW_UPDATE is not set
 # CONFIG_DECON_BLOCKING_MODE is not set
 CONFIG_DECON_EVENT_LOG=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_7870=y
-# CONFIG_EXYNOS7870_DISPLAY_COMMAND_MODE is not set
-CONFIG_EXYNOS7870_DISPLAY_VIDEO_MODE=y
+CONFIG_EXYNOS7870_DISPLAY_COMMAND_MODE=y
+# CONFIG_EXYNOS7870_DISPLAY_VIDEO_MODE is not set
+# CONFIG_EXYNOS7870_DISPLAY_TE_IRQ_GPIO is not set
+CONFIG_EXYNOS7870_DISPLAY_TE_IRQ_GIC=y
+CONFIG_DECON_LPD_DISPLAY_WITH_CAMERA=y
 # CONFIG_DECON_DEVFREQ is not set
-# CONFIG_DECON_USE_BOOTLOADER_FB is not set
 # CONFIG_EXYNOS_MIPI_DSI_ENABLE_EARLY is not set
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 CONFIG_PANEL_AID_DIMMING=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
-# CONFIG_LCD_DOZE_MODE is not set
+CONFIG_LCD_DOZE_MODE=y
 CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_EA8064G_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_J7XE is not set
 # CONFIG_PANEL_S6E3FA3_A7MAX is not set
-# CONFIG_PANEL_S6E3FA3_J7Y17 is not set
+CONFIG_PANEL_S6E3FA3_J7Y17=y
 # CONFIG_PANEL_EA8061S_J7XE is not set
 # CONFIG_PANEL_S6E3AA2_AMS474KF09 is not set
 # CONFIG_PANEL_S6E3AA2_A3Y17 is not set
@@ -2678,8 +2682,7 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_TD4300 is not set
 # CONFIG_PANEL_BRIGHTNESS_MAX_480CD is not set
 # CONFIG_PANEL_TD4100_J7POP is not set
-CONFIG_PANEL_S6E8AA5X01=y
-# CONFIG_PANEL_S6E8AA5X01_J5Y17_KOR is not set
+# CONFIG_PANEL_S6E8AA5X01 is not set
 # CONFIG_PANEL_EA8061S_J7VE is not set
 # CONFIG_PANEL_S6D7AA0_GTACTIVE2 is not set
 # CONFIG_EXYNOS_LCD_PWM_BACKLIGHT is not set
