Switch back to J5 Display

--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -2671,7 +2671,7 @@ CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_EA8064G_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_J7XE is not set
 # CONFIG_PANEL_S6E3FA3_A7MAX is not set
-CONFIG_PANEL_S6E3FA3_J7Y17=y
+# CONFIG_PANEL_S6E3FA3_J7Y17 is not set
 # CONFIG_PANEL_EA8061S_J7XE is not set
 # CONFIG_PANEL_S6E3AA2_AMS474KF09 is not set
 # CONFIG_PANEL_S6E3AA2_A3Y17 is not set
@@ -2687,6 +2687,7 @@ CONFIG_PANEL_S6E3FA3_J7Y17=y
 # CONFIG_PANEL_S6D7AA0_GTACTIVE2 is not set
 # CONFIG_EXYNOS_LCD_PWM_BACKLIGHT is not set
 # CONFIG_FB_SSD1307 is not set
+CONFIG_PANEL_S6E8AA5X01=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_L4F00242T03 is not set
