boeffla_wl_blocker: add generic wakelock blocker driver v1.0.0--v1.1.0
Squashed
Based on ideas of FranciscoFranco's non-generic driver.

Sysfs node:

	/sys/class/misc/boeffla_wakelock_blocker/wakelock_blocker

		- list of wakelocks to be blocked, separated by semicolons

	/sys/class/misc/boeffla_wakelock_blocker/debug

		- write: 0/1 to switch off and on debug logging into dmesg
		- read:  get current driver internals

	/sys/class/misc/boeffla_wakelock_blocker/version

		- show driver version
boeffla_wl_blocker: update to wakelock blocker driver v1.0.1

- currently active wakelocks on the list are forcefully killed

boeffla_wl_blocker: update to wakelock blocker driver v1.1.0

There are now two lists:
- the previously existing list of user defined wakelocks to block
- a new list called "wakelock_blocker_default" which comes prepopulated with the most common
  and safe wakelocks to block:

    qcom_rx_wakelock;wlan;wlan_wow_wl;wlan_extscan_wl;netmgr_wl;NETLINK

A combination of both wakelock lists will be blocked finally.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ arch/arm64/include/generated/
 boot.img-dtb
 rf-tools/out/boot_J530F.img
 dmesg.sh
+drivers/leds/.tmp_led-class.ver
+rf-tools/out/
+drivers/leds/.tmp_led-class.ver
