--- a/drivers/soc/samsung/Makefile
+++ b/drivers/soc/samsung/Makefile
@@ -25,3 +25,5 @@ obj-$(CONFIG_ECT)		+= ect_parser.o
 
 obj-$(CONFIG_EXYNOS_HOTPLUG_GOVERNOR)	+= exynos-hotplug_governor.o
 obj-$(CONFIG_SEC_INCELL) += sec_incell.o
+
+obj-$(CONFIG_THUNDERPLUG_CONTROL)	+= thunderplug.o
