--- a/drivers/soc/samsung/Kconfig
+++ b/drivers/soc/samsung/Kconfig
@@ -61,7 +61,10 @@ config MCINFO_SYSFS
 	bool "Exynos memory controller information sysfs"
 	depends on EXYNOS_MCINFO
 	default	y if SYSFS
-	
+
+config STATE_NOTIFIER
+        bool "State Notifier"
+
 config THUNDERPLUG_CONTROL
 	bool "Enable plugging down/up of cores based on load per core"
 	depends on SMP && HOTPLUG_CPU
