--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -492,6 +492,7 @@ CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
+CONFIG_STATE_NOTIFIER=y
 
 #
 # CPU Power Management
