Enable Thunderplug Driver V5.4

--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -493,6 +493,7 @@ CONFIG_CPU_PM=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
 CONFIG_STATE_NOTIFIER=y
+CONFIG_THUNDERPLUG_CONTROL=y
 
 #
 # CPU Power Management
