--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -4287,6 +4287,8 @@ CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_VIRTUALIZATION is not set
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
 
 #
 # Kernel hacking
