--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -20,7 +20,7 @@ config SUSPEND_FREEZER
 	  
 config POWERSUSPEND
 	bool "Power suspend"
-	default n
+	default y
 	---help---
 	  Call early suspend handlers when the user requested sleep state
 	  changes.
