--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -4289,7 +4289,7 @@ CONFIG_NLS_UTF8=y
 CONFIG_POWERSUSPEND=y
 # CONFIG_POWERSUSPEND_DEBUG is not set
 CONFIG_DYNAMIC_FSYNC=y
-CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 #
 # Kernel hacking
 #
