--- a/arch/arm64/configs/j7y17lte_eur_open_defconfig
+++ b/arch/arm64/configs/j7y17lte_eur_open_defconfig
@@ -4279,7 +4279,10 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_VIRTUALIZATION is not set
-
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
+CONFIG_DYNAMIC_FSYNC=y
+#CONFIG_ASYNC_FSYNC=y
 #
 # Kernel hacking
 #
