--- a/arch/arm64/configs/j5y17lte_eur_openm_defconfig
+++ b/arch/arm64/configs/j5y17lte_eur_openm_defconfig
@@ -40,8 +40,8 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-RefinedKernel_V2.5"
-CONFIG_LOCALVERSION_AUTO=n
+CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -274,34 +274,11 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-
-CONFIG_IOSCHED_CFQ=y
-CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_FIFO=y
-CONFIG_IOSCHED_FIOPS=y
-CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_NOOP=y
-CONFIG_IOSCHED_SIO=y
-CONFIG_IOSCHED_SIOPLUS=y
-CONFIG_IOSCHED_TRIPNDROID=y
-CONFIG_IOSCHED_VR=y
-CONFIG_IOSCHED_ZEN=y
+# CONFIG_IOSCHED_DEADLINE is not set
+CONFIG_IOSCHED_CFQ=y
 CONFIG_DEFAULT_CFQ=y
-CONFIG_IOSCHED_ROW=y
-CONFIG_IOSCHED_BFQ=y
-# CONFIG_CGROUP_BFQIO is not set
 # CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_FIFO is not set
-# CONFIG_DEFAULT_FIOPS is not set
-# CONFIG_DEFAULT_MAPLE is not set
-# CONFIG_DEFAULT_SIO is not set
-# CONFIG_DEFAULT_SIOPLUS is not set
-# CONFIG_DEFAULT_TRIPNDROID is not set
-# CONFIG_DEFAULT_VR is not set
-# CONFIG_DEFAULT_ZEN is not set
-# CONFIG_DEFAULT_ROW is not set
-# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -405,8 +382,6 @@ CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=1
 CONFIG_BOUNCE=y
 CONFIG_KSM=y
-CONFIG_UKSM=y
-# CONFIG_KSM_LEGACY is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 # CONFIG_CLEANCACHE is not set
@@ -444,8 +419,8 @@ CONFIG_SETEND_EMULATION=y
 #
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
-# CONFIG_TIMA is not set
-# CONFIG_TIMA_LKMAUTH is not set
+CONFIG_TIMA=y
+CONFIG_TIMA_LKMAUTH=y
 # CONFIG_TIMA_RKP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
@@ -491,8 +466,6 @@ CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
-CONFIG_STATE_NOTIFIER=y
-CONFIG_THUNDERPLUG_CONTROL=y
 
 #
 # CPU Power Management
@@ -527,37 +500,14 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND_X is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
-CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
-CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
-CONFIG_CPU_FREQ_GOV_IMPULSE=y
-CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND_X=y
-CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_LIONHEART=y
-CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
-CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_POWERSAVE=y
+# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPUFREQ_DT=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+# CONFIG_CPUFREQ_DT is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -621,15 +571,15 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
-CONFIG_TCP_CONG_HSTCP=y
-CONFIG_TCP_CONG_HYBLA=y
-CONFIG_TCP_CONG_VEGAS=y
-CONFIG_TCP_CONG_SCALABLE=y
-CONFIG_TCP_CONG_LP=y
-CONFIG_TCP_CONG_VENO=y
-CONFIG_TCP_CONG_YEAH=y
-CONFIG_TCP_CONG_ILLINOIS=y
-CONFIG_TCP_CONG_DCTCP=y
+# CONFIG_TCP_CONG_HSTCP is not set
+# CONFIG_TCP_CONG_HYBLA is not set
+# CONFIG_TCP_CONG_VEGAS is not set
+# CONFIG_TCP_CONG_SCALABLE is not set
+# CONFIG_TCP_CONG_LP is not set
+# CONFIG_TCP_CONG_VENO is not set
+# CONFIG_TCP_CONG_YEAH is not set
+# CONFIG_TCP_CONG_ILLINOIS is not set
+# CONFIG_TCP_CONG_DCTCP is not set
 CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
@@ -1037,8 +987,10 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 CONFIG_SAMSUNG_NFC=y
-# CONFIG_ESE_P3_LSI is not set
-# CONFIG_ESE_SECURE is not set
+CONFIG_ESE_P3_LSI=y
+CONFIG_ESE_SECURE=y
+CONFIG_ESE_SECURE_SPI_PORT=0
+CONFIG_ESE_SECURE_GPIO="gpc6"
 # CONFIG_NFC_PN533 is not set
 # CONFIG_NFC_SIM is not set
 # CONFIG_NFC_FELICA is not set
@@ -1142,7 +1094,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-# CONFIG_KNOX_KAP is not set
+CONFIG_KNOX_KAP=y
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1158,6 +1110,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
+CONFIG_TIMA_LOG=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1579,9 +1532,9 @@ CONFIG_KEYBOARD_SAMSUNG=y
 # CONFIG_KEYBOARD_CAP1106 is not set
 # CONFIG_KEYBOARD_TC300K is not set
 # CONFIG_TOUCHKEY_LIGHT_EFS is not set
-CONFIG_TOUCHKEY_GRIP=y
+# CONFIG_TOUCHKEY_GRIP is not set
 # CONFIG_KEYBOARD_ABOV_TOUCH_FT1804 is not set
-# CONFIG_KEYBOARD_ABOV_TOUCH_T316 is not set
+CONFIG_KEYBOARD_ABOV_TOUCH_T316=y
 # CONFIG_KEYBOARD_ABOV_TOUCH is not set
 # CONFIG_KEYBOARD_MELFAS_MHS204 is not set
 # CONFIG_KEYBOARD_MELFAS_MHS204G is not set
@@ -1670,11 +1623,11 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_IST3038C is not set
 # CONFIG_TOUCHSCREEN_IST3044C is not set
 # CONFIG_TOUCHSCREEN_IST3048C is not set
-# CONFIG_TOUCHSCREEN_IST3038H is not set
-# CONFIG_TOUCHSCREEN_IMAGIS_LPM_NO_RESET is not set
+CONFIG_TOUCHSCREEN_IST3038H=y
+CONFIG_TOUCHSCREEN_IMAGIS_LPM_NO_RESET=y
 # CONFIG_TOUCHSCREEN_ZINITIX_BT532 is not set
 # CONFIG_TOUCHSCREEN_ZINITIX_ZT75XX is not set
-CONFIG_TOUCHSCREEN_MELFAS_MMS438=y
+# CONFIG_TOUCHSCREEN_MELFAS_MMS438 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS438S is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS449 is not set
 # CONFIG_TOUCHSCREEN_MELFAS_MMS458 is not set
@@ -2469,8 +2422,8 @@ CONFIG_CAMERA_EEPROM_SUPPORT_FRONT=y
 # CONFIG_CAMERA_ON7X is not set
 # CONFIG_CAMERA_A3XPREMIUM is not set
 # CONFIG_CAMERA_A3Y17 is not set
-# CONFIG_CAMERA_J5Y17 is not set
-CONFIG_CAMERA_J7Y17=y
+CONFIG_CAMERA_J5Y17=y
+# CONFIG_CAMERA_J7Y17 is not set
 # CONFIG_CAMERA_J7POPKOR is not set
 # CONFIG_CAMERA_J7POP is not set
 # CONFIG_CAMERA_J7VE is not set
@@ -2653,28 +2606,24 @@ CONFIG_EXYNOS_MIPI_DSI=y
 CONFIG_USE_VSYNC_SKIP=y
 CONFIG_EXYNOS_DECON_FB=y
 # CONFIG_DECON_MIPI_DSI_PKTGO is not set
-CONFIG_DECON_LPD_DISPLAY=y
-# CONFIG_FB_WINDOW_UPDATE is not set
 # CONFIG_DECON_BLOCKING_MODE is not set
 CONFIG_DECON_EVENT_LOG=y
 CONFIG_EXYNOS_DECON_LCD=y
 CONFIG_EXYNOS_DECON_7870=y
-CONFIG_EXYNOS7870_DISPLAY_COMMAND_MODE=y
-# CONFIG_EXYNOS7870_DISPLAY_VIDEO_MODE is not set
-# CONFIG_EXYNOS7870_DISPLAY_TE_IRQ_GPIO is not set
-CONFIG_EXYNOS7870_DISPLAY_TE_IRQ_GIC=y
-CONFIG_DECON_LPD_DISPLAY_WITH_CAMERA=y
+# CONFIG_EXYNOS7870_DISPLAY_COMMAND_MODE is not set
+CONFIG_EXYNOS7870_DISPLAY_VIDEO_MODE=y
 # CONFIG_DECON_DEVFREQ is not set
+# CONFIG_DECON_USE_BOOTLOADER_FB is not set
 # CONFIG_EXYNOS_MIPI_DSI_ENABLE_EARLY is not set
 CONFIG_EXYNOS_DECON_LCD_SYSFS=y
 CONFIG_PANEL_AID_DIMMING=y
 CONFIG_EXYNOS_DECON_MDNIE_LITE=y
-CONFIG_LCD_DOZE_MODE=y
+# CONFIG_LCD_DOZE_MODE is not set
 CONFIG_DISPLAY_USE_INFO=y
 # CONFIG_PANEL_EA8064G_DYNAMIC is not set
 # CONFIG_PANEL_S6E3FA3_J7XE is not set
 # CONFIG_PANEL_S6E3FA3_A7MAX is not set
-CONFIG_PANEL_S6E3FA3_J7Y17=y
+# CONFIG_PANEL_S6E3FA3_J7Y17 is not set
 # CONFIG_PANEL_EA8061S_J7XE is not set
 # CONFIG_PANEL_S6E3AA2_AMS474KF09 is not set
 # CONFIG_PANEL_S6E3AA2_A3Y17 is not set
@@ -2685,7 +2634,8 @@ CONFIG_PANEL_S6E3FA3_J7Y17=y
 # CONFIG_PANEL_TD4300 is not set
 # CONFIG_PANEL_BRIGHTNESS_MAX_480CD is not set
 # CONFIG_PANEL_TD4100_J7POP is not set
-# CONFIG_PANEL_S6E8AA5X01 is not set
+CONFIG_PANEL_S6E8AA5X01=y
+# CONFIG_PANEL_S6E8AA5X01_J5Y17_KOR is not set
 # CONFIG_PANEL_EA8061S_J7VE is not set
 # CONFIG_PANEL_S6D7AA0_GTACTIVE2 is not set
 # CONFIG_EXYNOS_LCD_PWM_BACKLIGHT is not set
@@ -3664,7 +3614,6 @@ CONFIG_COMMON_CLK_SAMSUNG=y
 #
 # Clock Source drivers
 #
-CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CLKSRC_OF=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
@@ -4013,7 +3962,7 @@ CONFIG_SENSORS_TMD3725=y
 # CONFIG_SENSORS_SX9306_WIFI is not set
 # CONFIG_SENSORS_SX9310 is not set
 # CONFIG_SENSORS_SX9310_WIFI is not set
-# CONFIG_SENSORS_SX9320 is not set
+CONFIG_SENSORS_SX9320=y
 # CONFIG_SENSORS_SX9500 is not set
 # CONFIG_SENSORS_SX9500_WIFI is not set
 # CONFIG_SENSORS_GRIP_CHK_HALLIC is not set
@@ -4160,9 +4109,7 @@ CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_EXFAT_SUPPORT_STLOG=y
-# CONFIG_NTFS_DEBUG is not set
-CONFIG_NTFS_RW=y
-CONFIG_NTFS_FS=y
+# CONFIG_NTFS_FS is not set
 
 #
 # Pseudo filesystems
@@ -4211,13 +4158,7 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-CONFIG_F2FS_FS=y
-CONFIG_F2FS_STAT_FS=y
-CONFIG_F2FS_FS_XATTR=y
-CONFIG_F2FS_FS_POSIX_ACL=y
-# CONFIG_F2FS_FS_SECURITY is not set
-# CONFIG_F2FS_CHECK_FS is not set
-# CONFIG_F2FS_FS_ENCRYPTION is not set
+# CONFIG_F2FS_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
@@ -4279,10 +4220,7 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_VIRTUALIZATION is not set
-CONFIG_POWERSUSPEND=y
-# CONFIG_POWERSUSPEND_DEBUG is not set
-CONFIG_DYNAMIC_FSYNC=y
-#CONFIG_ASYNC_FSYNC=y
+
 #
 # Kernel hacking
 #
@@ -4456,10 +4394,10 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-# CONFIG_SEC_RESTRICT_ROOTING is not set
-# CONFIG_SEC_RESTRICT_SETUID is not set
-# CONFIG_SEC_RESTRICT_FORK is not set
-# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
+CONFIG_SEC_RESTRICT_ROOTING=y
+CONFIG_SEC_RESTRICT_SETUID=y
+CONFIG_SEC_RESTRICT_FORK=y
+CONFIG_SEC_RESTRICT_ROOTING_LOG=y
 
 #
 # Security options
@@ -4495,6 +4433,7 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
+CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
