config: enable HPM booster
Signed-off-by: BULGARICUS <paradelovhristiyan@gmail.com>

--- a/arch/arm64/configs/j5y17lte_eur_openm_defconfig
+++ b/arch/arm64/configs/j5y17lte_eur_openm_defconfig
@@ -3639,6 +3639,7 @@ CONFIG_ECT=y
 CONFIG_ECT_DUMP=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
 CONFIG_SCHED_AVG_NR_RUNNING=y
+CONFIG_SCHED_HMP=y
 CONFIG_EXYNOS_HOTPLUG_GOVERNOR=y
 CONFIG_EXYNOS_MCINFO=y
 CONFIG_MCINFO_SYSFS=y
