Disable RMM trigger

--- a/rf-tools/Unified/ramdisk/init.rc
+++ b/rf-tools/Unified/ramdisk/init.rc
@@ -1562,8 +1562,9 @@ on property:ro.debuggable=1
     chmod 0773 /data/misc/trace
     start console
 
-service vaultkeeperd /system/bin/vaultkeeperd
-    class core
+# Disable Samsung RMM State trigger
+# service vaultkeeperd /system/bin/vaultkeeperd
+#     class core
 
 service drm /system/bin/drmserver
     class main
