--- a/arch/arm64/boot/dts/exynos7870.dtsi
+++ b/arch/arm64/boot/dts/exynos7870.dtsi
@@ -406,7 +406,7 @@
 		/* For CPUFREQ table */
 		/* CL0 */
 		cl0_idx_num = <17>;
-		cl0_max_support_idx = <1;
+		cl0_max_support_idx = <1>;
 		cl0_min_support_idx = <16>;
 		cl0_boot_max_qos = <1924000>;
 		cl0_boot_min_qos = <1586000>;
@@ -416,7 +416,7 @@
 
 		/* CL1 */
 		cl1_idx_num = <17>;
-		cl1_max_support_idx = <1;
+		cl1_max_support_idx = <1>;
 		cl1_min_support_idx = <16>;
 		cl1_boot_max_qos = <1924000>;
 		cl1_boot_min_qos = <1586000>;
