--- a/arch/arm64/boot/dts/exynos7870-j5y17lte_common.dtsi
+++ b/arch/arm64/boot/dts/exynos7870-j5y17lte_common.dtsi
@@ -642,7 +642,7 @@
 		trigger_type_6 = <THROTTLE_ACTIVE>;
 		trigger_type_7 = <HW_TRIP>;
 
-		freq_tab_count = <8>;
+		freq_tab_count = <9>;
 
 		freq_clip_max_0 = <1794000>;
 		freq_clip_max_1 = <1690000>;
@@ -652,6 +652,7 @@
 		freq_clip_max_5 = <546000>;
 		freq_clip_max_6 = <449000>;
 		freq_clip_max_7 = <343000>;
+		freq_clip_max_8 = <250000>;		
 		
 		cooling_level_0 = <76>;
 		cooling_level_1 = <76>;
@@ -660,7 +661,8 @@
 		cooling_level_4 = <86>;
 		cooling_level_5 = <91>;
 		cooling_level_6 = <96>;
-		cooling_level_7 = <96>;		
+		cooling_level_7 = <96>;
+		cooling_level_8 = <96>;		
 	};
 
 	tmuctrl_1: tmuctrl_CPUCL1@10130000 {
@@ -698,7 +700,7 @@
 		trigger_type_6 = <THROTTLE_ACTIVE>;
 		trigger_type_7 = <HW_TRIP>;
 
-		freq_tab_count = <8>;
+		freq_tab_count = <9>;
 
 		freq_clip_max_0 = <1794000>;
 		freq_clip_max_1 = <1690000>;
@@ -708,8 +710,9 @@
 		freq_clip_max_5 = <546000>;
 		freq_clip_max_6 = <449000>;
 		freq_clip_max_7 = <343000>;
+		freq_clip_max_8 = <250000>;		
 		
-		cooling_level_0 = <71>;
+		cooling_level_0 = <76>;
 		cooling_level_1 = <76>;
 		cooling_level_2 = <76>;
 		cooling_level_3 = <81>;
@@ -717,6 +720,7 @@
 		cooling_level_5 = <91>;
 		cooling_level_6 = <96>;
 		cooling_level_7 = <96>;
+		cooling_level_8 = <96>;	
 		
 		hotplug_enable = <1>;
 		hotplug_in_threshold = <91>;
