--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -3990,9 +3990,9 @@ CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-CONFIG_TRUSTONIC_TRUSTED_UI=y
-CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
-CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
+# CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK is not set
+# CONFIG_TRUSTED_UI_TOUCH_ENABLE is not set
 # CONFIG_EXYNOS_APM is not set
 # CONFIG_MARVELL_DRIVERS is not set
 CONFIG_SENSORS=y
