--- a/arch/arm64/configs/j7y17lte_eur_open_defconfig
+++ b/arch/arm64/configs/j7y17lte_eur_open_defconfig
@@ -41,7 +41,7 @@ CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
@@ -274,11 +274,34 @@ CONFIG_BLOCK_COMPAT=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_NOOP=y
-# CONFIG_IOSCHED_DEADLINE is not set
+
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_FIFO=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_NOOP=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
 CONFIG_DEFAULT_CFQ=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_BFQ=y
+# CONFIG_CGROUP_BFQIO is not set
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_FIFO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_SIOPLUS is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+# CONFIG_DEFAULT_VR is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
@@ -419,9 +442,9 @@ CONFIG_SETEND_EMULATION=y
 #
 CONFIG_CMDLINE=""
 # CONFIG_EFI is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_RKP=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_RKP is not set
 # CONFIG_RKP_KDP is not set
 # CONFIG_TIMA_TEST_INFRA is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
@@ -467,6 +490,8 @@ CONFIG_CPU_PM=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM64_CPU_SUSPEND=y
+CONFIG_STATE_NOTIFIER=y
+CONFIG_THUNDERPLUG_CONTROL=y
 
 #
 # CPU Power Management
@@ -501,14 +526,37 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ZZMOOVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMANDPLUS is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND_X is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PEGASUSQ is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_LIONHEART is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIMM is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_IMPULSE is not set
+CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND_X=y
+CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_SMARTASS2=y
+CONFIG_CPU_FREQ_GOV_LIONHEART=y
+CONFIG_CPU_FREQ_GOV_INTELLIACTIVE=y
+CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-# CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
+CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
-# CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
+CONFIG_CPUFREQ_DT=y
 
 #
 # ARM CPU frequency scaling drivers
@@ -572,15 +620,15 @@ CONFIG_TCP_CONG_BIC=y
 CONFIG_TCP_CONG_CUBIC=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
-# CONFIG_TCP_CONG_HSTCP is not set
-# CONFIG_TCP_CONG_HYBLA is not set
-# CONFIG_TCP_CONG_VEGAS is not set
-# CONFIG_TCP_CONG_SCALABLE is not set
-# CONFIG_TCP_CONG_LP is not set
-# CONFIG_TCP_CONG_VENO is not set
-# CONFIG_TCP_CONG_YEAH is not set
-# CONFIG_TCP_CONG_ILLINOIS is not set
-# CONFIG_TCP_CONG_DCTCP is not set
+CONFIG_TCP_CONG_HSTCP=y
+CONFIG_TCP_CONG_HYBLA=y
+CONFIG_TCP_CONG_VEGAS=y
+CONFIG_TCP_CONG_SCALABLE=y
+CONFIG_TCP_CONG_LP=y
+CONFIG_TCP_CONG_VENO=y
+CONFIG_TCP_CONG_YEAH=y
+CONFIG_TCP_CONG_ILLINOIS=y
+CONFIG_TCP_CONG_DCTCP=y
 CONFIG_DEFAULT_BIC=y
 # CONFIG_DEFAULT_CUBIC is not set
 # CONFIG_DEFAULT_HTCP is not set
@@ -1093,7 +1141,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_ENCLOSURE_SERVICES is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1780 is not set
@@ -1109,7 +1157,7 @@ CONFIG_UID_STAT=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1269,7 +1317,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_SWITCH is not set
 # CONFIG_TARGET_CORE is not set
 CONFIG_NETDEVICES=y
@@ -3616,6 +3664,7 @@ CONFIG_COMMON_CLK_SAMSUNG=y
 #
 # Clock Source drivers
 #
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_CLKSRC_OF=y
 CONFIG_ARM_ARCH_TIMER=y
 CONFIG_ARM_ARCH_TIMER_EVTSTREAM=y
@@ -3936,9 +3985,9 @@ CONFIG_SECURE_OS_BOOSTER_API=y
 CONFIG_TRUSTONIC_TEE=y
 CONFIG_TRUSTONIC_TEE_LPAE=y
 # CONFIG_TRUSTONIC_TEE_DEBUG is not set
-CONFIG_TRUSTONIC_TRUSTED_UI=y
-CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK=y
-CONFIG_TRUSTED_UI_TOUCH_ENABLE=y
+# CONFIG_TRUSTONIC_TRUSTED_UI is not set
+# CONFIG_TRUSTONIC_TRUSTED_UI_FB_BLANK is not set
+# CONFIG_TRUSTED_UI_TOUCH_ENABLE is not set
 # CONFIG_EXYNOS_APM is not set
 # CONFIG_MARVELL_DRIVERS is not set
 CONFIG_SENSORS=y
@@ -4111,7 +4160,9 @@ CONFIG_EXFAT_FS=y
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:sdcard_external:s0"
 CONFIG_EXFAT_SUPPORT_STLOG=y
-# CONFIG_NTFS_FS is not set
+# CONFIG_NTFS_DEBUG is not set
+CONFIG_NTFS_RW=y
+CONFIG_NTFS_FS=y
 
 #
 # Pseudo filesystems
@@ -4160,7 +4211,13 @@ CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+# CONFIG_F2FS_FS_SECURITY is not set
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
 # CONFIG_NFSD is not set
@@ -4222,7 +4279,10 @@ CONFIG_NLS_ISO8859_1=y
 CONFIG_NLS_UTF8=y
 # CONFIG_DLM is not set
 # CONFIG_VIRTUALIZATION is not set
-
+CONFIG_POWERSUSPEND=y
+# CONFIG_POWERSUSPEND_DEBUG is not set
+CONFIG_DYNAMIC_FSYNC=y
+CONFIG_ASYNC_FSYNC=y
 #
 # Kernel hacking
 #
@@ -4396,10 +4456,10 @@ CONFIG_HAVE_ARCH_KGDB=y
 #
 # Samsung Rooting Restriction Feature
 #
-CONFIG_SEC_RESTRICT_ROOTING=y
-CONFIG_SEC_RESTRICT_SETUID=y
-CONFIG_SEC_RESTRICT_FORK=y
-CONFIG_SEC_RESTRICT_ROOTING_LOG=y
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
 
 #
 # Security options
@@ -4435,7 +4495,7 @@ CONFIG_INTEGRITY=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_TZ_ICCC=y
+# CONFIG_TZ_ICCC is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
