--- a/arch/arm64/configs/j7y17lte_eur_open_defconfig
+++ b/arch/arm64/configs/j7y17lte_eur_open_defconfig
@@ -826,7 +826,7 @@ CONFIG_NF_NAT_H323=y
 CONFIG_IP_NF_IPTABLES=y
 CONFIG_IP_NF_MATCH_AH=y
 CONFIG_IP_NF_MATCH_ECN=y
-# CONFIG_IP_NF_MATCH_RPFILTER is not set
+CONFIG_IP_NF_MATCH_RPFILTER=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
@@ -862,7 +862,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_HL is not set
 # CONFIG_IP6_NF_MATCH_IPV6HEADER is not set
 # CONFIG_IP6_NF_MATCH_MH is not set
-# CONFIG_IP6_NF_MATCH_RPFILTER is not set
+CONFIG_IP6_NF_MATCH_RPFILTER=y
 # CONFIG_IP6_NF_MATCH_RT is not set
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
@@ -1036,8 +1036,10 @@ CONFIG_RFKILL_PM=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 CONFIG_SAMSUNG_NFC=y
-# CONFIG_ESE_P3_LSI is not set
-# CONFIG_ESE_SECURE is not set
+CONFIG_ESE_P3_LSI=y
+CONFIG_ESE_SECURE=y
+CONFIG_ESE_SECURE_SPI_PORT=0
+CONFIG_ESE_SECURE_GPIO="gpc6"
 # CONFIG_NFC_PN533 is not set
 # CONFIG_NFC_SIM is not set
 # CONFIG_NFC_FELICA is not set
@@ -3196,7 +3198,7 @@ CONFIG_USB_U_SERIAL=y
 # CONFIG_USB_CONFIGFS is not set
 CONFIG_USB_G_ANDROID=y
 CONFIG_USB_ANDROID_SAMSUNG_COMPOSITE=y
-CONFIG_USB_ANDROID_SAMSUNG_MTP=y
+# CONFIG_USB_ANDROID_SAMSUNG_MTP=y
 # CONFIG_USB_LOCK_SUPPORT_FOR_MDM is not set
 CONFIG_USB_DUN_SUPPORT=y
 CONFIG_USB_NCM_SUPPORT_MTU_CHANGE=y
