enable samsung sdcardfs

--- a/arch/arm64/configs/j5y17lte_01_defconfig
+++ b/arch/arm64/configs/j5y17lte_01_defconfig
@@ -4100,6 +4100,7 @@ CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
+CONFIG_SDCARD_FS_FADV_NOACTIVE=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
 CONFIG_SDCARD_FS_XATTR=y
 CONFIG_JBD=y
