--- a/arch/arm64/configs/j5y17lte_eur_openm_defconfig
+++ b/arch/arm64/configs/j5y17lte_eur_openm_defconfig
@@ -4104,6 +4104,7 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_SDCARD_FS=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
 CONFIG_SDCARD_FS_XATTR=y
+CONFIG_SDCARD_FS_FADV_NOACTIVE=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
