--- a/arch/arm64/configs/j7y17lte_eur_open_defconfig
+++ b/arch/arm64/configs/j7y17lte_eur_open_defconfig
@@ -4097,6 +4097,7 @@ CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_SDCARD_FS=y
 CONFIG_SDCARD_FS_CI_SEARCH=y
+CONFIG_SDCARD_FS_FADV_NOACTIVE=y
 CONFIG_SDCARD_FS_XATTR=y
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
