--- a/rf-tools/Unified/ramdisk/init.rilchip.rc
+++ b/rf-tools/Unified/ramdisk/init.rilchip.rc
@@ -4,38 +4,32 @@
 # This is a common source of Android security bugs.
 #
 
-service ril-daemon /system/bin/rild
+service ril-daemon /vendor/bin/hw/rild -c 1 -l /system/lib/libsec-ril.so
     class main
     socket rild stream 660 root radio
     socket sap_uim_socket1 stream 660 bluetooth bluetooth
     socket rild-debug stream 660 radio system
     user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc
+    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc wakelock
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
     onrestart restart cpboot-daemon
 
-service ril-daemon1 /system/bin/rild -c 2
+service ril-daemon1 /vendor/bin/hw/rild -c 2 -l /system/lib/libsec-ril-dsds.so
     class main
     socket rild2 stream 660 root radio
     socket rild-debug2 stream 660 radio system
     user root
-    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc
-    disabled
+    group radio cache inet misc audio sdcard_r sdcard_rw log vpn system readproc wakelock
+    capabilities BLOCK_SUSPEND NET_ADMIN NET_RAW
+	 disabled
     onrestart restart cpboot-daemon
 
 on property:persist.sys.cpboot=disable
     stop ril-daemon
     stop cpboot-daemon
 
-service SMD-daemon /system/bin/smdexe
-    class main
-    user root
-    group system radio inet net_raw
-
-# DIAG
-service DIAG-daemon /system/bin/diagexe
-    class main
-    user root
-    group system radio inet net_raw
+on property:ro.multisim.simslotcount=2
+    start ril-daemon1
 
 on early-boot
 # Assign TCP buffer thresholds to be ceiling value of technology maximums
