--- a/rf-tools/Unified/ramdisk/init.samsungexynos7870.rc
+++ b/rf-tools/Unified/ramdisk/init.samsungexynos7870.rc
@@ -1,8 +1,10 @@
 import init.samsungexynos7870.usb.rc
 import init.baseband.rc
-import init.carrier.rc
 import init.wifi.rc
-import init.fac.rc
+import init.rilchip.rc
+
+# Samsung stock init.rc additions
+import init.samsung.rc
 
 on early-init
     mkdir /efs 0771 radio system
@@ -10,7 +12,7 @@ on early-init
     mount debugfs /sys/kernel/debug /sys/kernel/debug
 
 on init
-    start watchdogd
+    export LD_SHIM_LIBS "/system/lib/libbauthserver.so|/system/lib/libbauthtzcommon_shim.so:/system/lib/libexynoscamera.so|/system/vendor/lib/libcamhelpr.so:/system/bin/gpsd|/system/lib/gpsd_shim.so"
 
     mkdir /preload 0771 system system
 
@@ -21,7 +23,16 @@ on init
     # Support legacy paths
     symlink /sdcard /mnt/sdcard
 
+    symlink /sdcard /storage/sdcard0
+    symlink /sdcard1 /storage/sdcard1
+    symlink /sdcard1 /mnt/extSdCard
+    symlink /sdcard1 /mnt/sdcard1
+    symlink /sdcard1 /external_sd
+    symlink /storage/usbdisk /mnt/usbdisk
+ 
     export EXTERNAL_STORAGE /sdcard
+    export SECONDARY_STORAGE /storage/extSdCard
+
     symlink /data/app /factory
     symlink /dev/block/platform/13540000.dwmmc0/by-name/PERSISTENT /dev/block/persistent
     symlink /dev/block/platform/13540000.dwmmc0/by-name/STEADY /dev/block/steady
@@ -33,6 +44,8 @@ on post-fs-data
 # Permissions for gnss
     chmod 0660 /dev/gnss_ipc
     chown system system /dev/gnss_ipc
+	
+# Directory for GPS
     mkdir /data/system 0771 system system
     chown system system /data/system
     mkdir /data/system/gps 0771 system system
@@ -42,9 +55,9 @@ on post-fs-data
     rm /data/system/gps/beidou_started
     rm /data/system/gps/smd_started
     rm /data/system/gps/sv_cno.info
-    
+
     setprop vold.post_fs_data_done 1
-    
+
 # /efs/factory.prop for Dual / Single SIM settings
     chown radio radio /efs/factory.prop
     chmod 0600 /efs/factory.prop
@@ -52,20 +65,14 @@ on post-fs-data
 # Audio I2C node for TFA amp
     chmod 0660 /dev/i2c-20
     chown audio audio /dev/i2c-20
-    chown system audio /sys/class/nxp/tfa_log/data
-    chmod 0660 /sys/class/nxp/tfa_log/data
-    chown system audio /sys/class/nxp/tfa_log/data_maxx
-    chmod 0660 /sys/class/nxp/tfa_log/data_maxx
-    chown system audio /sys/class/nxp/tfa_log/count_overxmax
-    chmod 0660 /sys/class/nxp/tfa_log/count_overxmax
-    chown system audio /sys/class/nxp/tfa_log/data_maxt
-    chmod 0660 /sys/class/nxp/tfa_log/data_maxt
-    chown system audio /sys/class/nxp/tfa_log/count_overtmax
-    chmod 0660 /sys/class/nxp/tfa_log/count_overtmax
 
-# Create carrier folder for HiddenMenu
-on post-fs
-     mkdir /efs/carrier 0755 system system
+#SystemAnalysis
+    chown system system /cache/backup
+    chmod 0711 /cache/backup
+    chown system system /cache/backup_stage
+    chmod 0711 /cache/backup_stage
+	
+    restorecon /sys/kernel/debug/tracing/trace_marker
 
 on boot
     # override init.rc to keep plenty of large order chunks around
@@ -199,9 +206,12 @@ on boot
     chmod 0664 /sys/power/rtc_status
     chown system system /efs/FactoryApp/rtc_status
     chmod 0664 /efs/FactoryApp/rtc_status
-    
+
     chown bluetooth net_bt /dev/ttySAC0
     chmod 0660 /dev/ttySAC0
+
+#Wifi firmware reload path
+    chown wifi wifi /sys/module/dhd/parameters/firmware_path
 
 # sem_daemon permission
     chown system system /efs/sec_efs/ssp_data
@@ -209,12 +219,20 @@ on boot
 
 # permissions for bluetooth.
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
-    chown bluetooth net_bt_stack ro.bt.bdaddr_path
-    chown radio net_bt_stack /efs/bluetooth/bt_addr
+    chown bluetooth bluetooth ro.bt.bdaddr_path
+    chown radio bluetooth /efs/bluetooth/bt_addr
     chmod 0640 /efs/bluetooth/bt_addr
     chmod 0660 /sys/class/rfkill/rfkill0/state
+    chmod 0660 /sys/class/rfkill/rfkill0/device/extldo
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/state
     chown bluetooth net_bt /sys/class/rfkill/rfkill0/type
+    chown bluetooth net_bt /sys/class/rfkill/rfkill0/device/extldo
+
+# Fingerprint_sensor
+    chown system radio /sys/class/fingerprint/fingerprint/type_check
+    chown system radio /sys/class/fingerprint/fingerprint/name
+    chown system radio /sys/class/fingerprint/fingerprint/vendor
+    chown system radio /sys/class/fingerprint/fingerprint/adm
 
 #MST HW Support
 setprop ro.mst.support 1
@@ -247,7 +265,10 @@ setprop ro.mst.support 1
     chown system radio /sys/class/sensors/proximity_sensor/barcode_emul_en
     chown system radio /sys/class/sensors/proximity_sensor/prox_offset_pass
     chown system radio /sys/class/sensors/proximity_sensor/prox_trim
-
+    chown system radio /sys/class/sensors/proximity_sensor/prox_thresh
+    chown system radio /sys/class/sensors/proximity_sensor/thresh_detect_high
+    chown system radio /sys/class/sensors/proximity_sensor/thresh_detect_low
+    chown system radio /sys/class/sensors/proximity_sensor/dhr_sensor_info
 # Light_sensor
     chown system radio /sys/class/sensors/light_sensor/lux
     chown system radio /sys/class/sensors/light_sensor/raw_data
@@ -262,32 +283,6 @@ setprop ro.mst.support 1
     chown system radio /sys/class/sensors/gyro_sensor/selftest_dps
     chown system radio /sys/class/sensors/gyro_sensor/vendor
     chown system radio /sys/class/sensors/gyro_sensor/name
-
-# Magnetic_sensor
-    chown system radio /sys/class/sensors/magnetic_sensor/raw_data
-    chown system radio /sys/class/sensors/magnetic_sensor/vendor
-    chown system radio /sys/class/sensors/magnetic_sensor/name
-    chown system radio /sys/class/sensors/magnetic_sensor/selftest
-    chown system radio /sys/class/sensors/magnetic_sensor/raw_data
-
-# Grip_sensor
-    chown system radio /sys/class/sensors/grip_sensor/name
-    chown system radio /sys/class/sensors/grip_sensor/vendor
-    chown system radio /sys/class/sensors/grip_sensor/raw_data
-    chown system radio /sys/class/sensors/grip_sensor/threshold
-    chown system radio /sys/class/sensors/grip_sensor/calibration
-    chown system radio /sys/class/sensors/grip_sensor/onoff
-    chown system radio /sys/class/sensors/grip_sensor/reset
-    chown system radio /sys/class/sensors/grip_sensor/mode
-    chown system radio /sys/class/sensors/grip_sensor/gain
-    chown system radio /sys/class/sensors/grip_sensor/start
-    chown system radio /sys/class/sensors/grip_sensor/normal_threshold
-    chown system radio /sys/class/sensors/grip_sensor/gain_ch2
-    chown system radio /sys/class/sensors/grip_sensor/raw_data_ch2
-    chown system radio /sys/class/sensors/grip_sensor/diff_avg_ch2
-    chown system radio /sys/class/sensors/grip_sensor/normal_threshold_ch2
-    chown system radio /sys/class/sensors/grip_sensor/ch_state
-    chown system radio /sys/class/sensors/grip_sensor/body_threshold
 
 #device
     chown system system /dev/iio:device0
@@ -602,6 +597,12 @@ setprop ro.mst.support 1
 #Meta event
     chown system radio /sys/class/sensors/sensor_dev/flush
 
+# EFS permissions for O
+
+    chown system radio /efs/nv_data.bin
+    chown system radio /efs/nv_data.bin.md5
+    chown system radio /cpefs/.nv_core.bak
+
 # Permission for USB SELECT
     chown system system /sys/class/android_usb/android0/enable
     chmod 0660 /sys/class/android_usb/android0/enable
@@ -656,16 +657,12 @@ on fs
     chown system system /sys/class/backlight/panel/brightness
 
 # Permissions for LCD
-    chown system radio /sys/class/lcd/panel/manufacture_code
     chown system radio /sys/class/lcd/panel/lcd_type
-    chown system system /sys/class/lcd/panel/siop_enable
     chown system system /sys/class/lcd/panel/temperature
-    chown system radio /sys/class/lcd/panel/power_reduce
     chown system system /sys/class/lcd/panel/lux
     chown system media_rw /sys/class/lcd/panel/adaptive_control
     chown system system /sys/class/lcd/panel/dpui
     chown system system /sys/class/lcd/panel/dpui_dbg
-    chown system system /sys/devices/svc/OCTA/SVC_OCTA
 
 # Permissions for MDNIE
     chown system media_rw /sys/class/mdnie/mdnie/mode
@@ -674,7 +671,7 @@ on fs
     chown system system /sys/class/mdnie/mdnie/sensorRGB
     chown system system /sys/class/mdnie/mdnie/whiteRGB
     chown system system /sys/class/mdnie/mdnie/night_mode
-    chown system system /sys/class/mdnie/mdnie/mdnie_ldu
+    chown system system /sys/class/mdnie/mdnie/light_notification
 
 # For cpefs partition
     check_fs /dev/block/platform/13540000.dwmmc0/by-name/CPEFS ext4
@@ -698,13 +695,19 @@ on fs
     chmod 0660 /dev/p3
     chown system system /dev/p3
 
-# Permissions for input_booster
-    chown system radio /sys/class/input_booster/level
-    chown system radio /sys/class/input_booster/head
-    chown system radio /sys/class/input_booster/tail
-    chmod 0664 /sys/class/input_booster/level
-    chmod 0664 /sys/class/input_booster/head
-    chmod 0664 /sys/class/input_booster/tail
+# Permission for flashlight control for HAL3.3
+    chmod 0660 /sys/class/camera/flash/rear_torch_flash
+    chown cameraserver system /sys/class/camera/flash/rear_torch_flash
+    chmod 0660 /sys/class/camera/flash/front_torch_flash
+    chown media system /sys/class/camera/flash/front_torch_flash
+
+# Permissions for SVC LED
+    chown system system /sys/class/sec/led/led_blink
+    chown system system /sys/class/sec/led/led_r
+    chown system system /sys/class/sec/led/led_g
+    chown system system /sys/class/sec/led/led_b
+    chown system system /sys/class/sec/led/led_lowpower
+    chown system system /sys/class/sec/led/led_pattern
 
 # Permissions for TouchScreen
     chown system radio /sys/class/sec/tsp/cmd
@@ -721,6 +724,14 @@ on fs
     chown system radio /sys/class/sec/sec_touchkey/grip_irq_count
     chown system radio /sys/class/sec/sec_touchkey/touchkey_earjack
     chown system system /sys/class/sec/sec_touchkey/input/enabled
+
+# Permissions for input_booster
+    chown system radio /sys/class/input_booster/level
+    chown system radio /sys/class/input_booster/head
+    chown system radio /sys/class/input_booster/tail
+    chmod 0664 /sys/class/input_booster/level
+    chmod 0664 /sys/class/input_booster/head
+    chmod 0664 /sys/class/input_booster/tail
 
 # Permissions for gpio_keys
     chown radio system /sys/class/sec/sec_key/wakeup_keys
@@ -773,51 +784,36 @@ on fs
 
 #ARGOSD network_throughput
     chown system system /dev/network_throughput
-# ARGOSD
-service argos-daemon /system/bin/argosd
-    class main
-    user system
-    group system radio
-	
-# GPS
-service gpsd /system/bin/gpsd
-    class main
-    user gps
-    group system inet wakelock
-    ioprio be 0
-    seclabel u:r:gpsd:s0
-
-# LPM
-service lpm /system/bin/lpm
-    class sec-charger
-    critical
-
-on property:ro.bootmode=charger
-   mount ext4 /dev/block/platform/13540000.dwmmc0/by-name/SYSTEM /system wait ro
 
 on property:ro.bootmode=charger
     wait /dev/block/platform/13540000.dwmmc0/by-name/EFS
     check_fs /dev/block/platform/13540000.dwmmc0/by-name/EFS ext4
     mount ext4 /dev/block/platform/13540000.dwmmc0/by-name/EFS /efs nosuid nodev noatime noauto_da_alloc,discard,journal_async_commit
 
-on property:ro.bootmode=charger
-   class_start sec-charger
+service charger /charger
+    class charger
+    seclabel u:r:healthd:s0
 
-# MobiCore startup
-#service mobicore /system/bin/mcDriverDaemon -r /system/app/020a0000000000000000000000000000.drbin -r /system/app/mcRegistry/FFFFFFFFD00000000000000000000016.tlbin
-#    user drmrpc
-#    group drmrpc
-#    class core
-
-# RPMB daemon
-service rpmbd /system/bin/rpmbd
-     user root
-     group drmrpc
+# SecEDS
+service TvoutService_C /system/bin/bintvoutservice
      class main
+     user system
+     group graphics
+on property:ro.SecEDS.enable=false
+    stop TvoutService_C
 
-on property:sys.mobicoredaemon.enable=true
-    start cs_service
-    write /proc/iccc_ready 1
+# Bluetooth
+on property:wc_transport.start_hci=true
+    start start_hci_filter
+
+on property:wc_transport.start_hci=false
+    stop start_hci_filter
+
+service start_hci_filter /system/bin/wcnss_filter
+    class late_start
+    user bluetooth
+    group bluetooth qcom_diag
+    disabled
 
 on property:ro.multisim.simslotcount=1
     setprop persist.radio.multisim.config ss
@@ -825,41 +821,11 @@ on property:ro.multisim.simslotcount=1
 on property:ro.multisim.simslotcount=2
     setprop persist.radio.multisim.config dsds
 
-# Modem boot daemon
-#    service cpboot-daemon /system/bin/cbd -d
-#    class main
-#    user root
-#    group radio cache inet misc audio sdcard_rw log
-
-# DM daemon
-#    service DM-daemon /system/bin/dmd
-#    class main
-#    user root
-#    group system
-
-# FINGERPRINT FRAMEWORK : starts fingerprintd
-service fingerprintd /system/bin/fingerprintd
-    class late_start
-    user system
-    group system
-
 # VC daemon
     service VC-daemon /system/bin/vcd
     class main
     user root
     group system
-
-# SCE daemon
-#    service SCE-daemon /system/bin/sced
-#    class main
-#    user root
-#    group system
-
-# diag daemon
-#    service DM-daemon /system/bin/diagexe
-#    class main
-#    user root
-#    group system
 
 service fuse_sdcard /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard /storage/sdcard
     class late_start
@@ -867,18 +833,6 @@ service fuse_sdcard /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard /
 service fuse_usb1 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/usb1 /storage/usb1
     class late_start
     disabled
-
-# IPSec for VOLTE
-service ipsec-daemon /system/bin/IPSecService
-    class main
-    socket ipsec_socket stream 660 system net_admin
-    user system
-    group system net_raw inet net_admin
-
-# Set watchdog timer to 30 seconds and pet it every 10 seconds to get a 20 second margin
-service watchdogd /sbin/watchdogd 10 20
-    class core
-    seclabel u:r:watchdogd:s0
 
 # on userdebug and eng builds, enable kgdb on the serial console
 on property:ro.debuggable=1
@@ -891,6 +845,13 @@ service prepare_param /system/bin/prepare_param.sh /dev/block/platform/13540000.
     group root
     seclabel u:r:prepare_param:s0
     oneshot
+
+# GPS
+service gpsd /system/bin/gpsd
+    class main
+    user gps
+    group system inet wakelock
+    ioprio be 0
 
 # Secure Storage startup
 service secure_storage /system/bin/secure_storage_daemon
@@ -925,11 +886,10 @@ on property:persist.sys.storage_preload=0
     start umount_service
 
 # SSWAP
-service swapon /sbin/sswap -s -f 1536
+service sswap /sbin/sswap -s
     class core
     user root
     group root
-    seclabel u:r:sswap:s0
     oneshot
 
 # sem_daemon
@@ -957,3 +917,10 @@ on property:ro.wsmd.enable=true
     chmod 0711 /dev/socket/wsm_socket
     chown system system /dev/socket/wsm_socket
     start wsmd
+
+service cameraserver /system/bin/cameraserver
+    class main
+    user cameraserver
+    group media_rw audio camera drmrpc inet shell sdcard_r system
+    ioprio rt 4
+    writepid /dev/cpuset/foreground/tasks
